Addes test for JFR events in the unsafe allocation trace.